added more methods

--- a/note1.ipynb
+++ b/note1.ipynb
@@ -375,17 +375,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "class SystemOfLinearEq:\n",
+    "    def __init__(self,A,B):\n",
+    "        self.A=A\n",
+    "        self.B=B\n",
+    "        self.size=len(self. B)\n",
+    "        \n",
+    "    def summ(self,i,initial_vals):\n",
+    "        summ=0\n",
+    "        for x in range(1,self.size):\n",
+    "            j=(i+x)%self.size\n",
+    "            summ+=self.A[i][j]*initial_vals[j]\n",
+    "            #print(\"a[i][j]=\",self.A[i][j],\"init[j]=\",initial_vals[j],\"i=\",i,\"j=\",j,\"x=\",x)\n",
+    "        return summ    \n",
+    "            \n",
+    "        \n",
+    "    def gauss_jacobi_elementwise_meth(self,initial_vals,iterations=5):\n",
+    "        initial_vals_list=initial_vals.copy()\n",
+    "        for ite in range(iterations):\n",
+    "            approx=[]\n",
+    "            for i in range(self.size):\n",
+    "                x=(self.B[i]-(self.summ(i,initial_vals_list)))/self.A[i][i]\n",
+    "                approx.append(x)\n",
+    "            initial_vals_list=approx.copy()\n",
+    "            print(\"Iteration {0} : Xapprox={1}\".format(ite+1,initial_vals_list))\n",
+    "            print(\"\\n\")\n",
+    "                \n",
+    "    def gauss_siedel_matrix_meth(self,initial_vals,iterations=5):\n",
+    "        X=np.array(initial_vals)\n",
+    "        A=np.array(self.A)\n",
+    "        Lx=np.tril(A,0)\n",
+    "        B=np.array(self.B)\n",
+    "        U=np.triu(A,1)\n",
+    "        \n",
+    "        for ite in range(iterations):\n",
+    "            #print(\"X\",X,\"\\nU\",U)\n",
+    "            ux=np.matmul(U,X)\n",
+    "            #print(\"ux\",ux)\n",
+    "            Xapp=np.matmul(np.linalg.inv(Lx),B-ux)\n",
+    "            #print(\"xapp\",Xapp)\n",
+    "            X=Xapp.copy()\n",
+    "            print(\"Iteration {0} : Xapprox={1}\".format(ite+1,list(X)))\n",
+    "            print(\"\\n\")\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1 : Xapprox=[0.75, 1.0833333333333333, 1.5208333333333333]\n",
+      "\n",
+      "\n",
+      "Iteration 2 : Xapprox=[0.4791666666666667, 1.6805555555555554, 1.6701388888888888]\n",
+      "\n",
+      "\n",
+      "Iteration 3 : Xapprox=[0.32986111111111116, 1.7800925925925926, 1.6950231481481481]\n",
+      "\n",
+      "\n",
+      "Iteration 4 : Xapprox=[0.30497685185185186, 1.796682098765432, 1.699170524691358]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1=SystemOfLinearEq([[4,1,0],[1,3,-1],[0,-1,4]],[3,4,5])\n",
+    "s1.gauss_siedel_matrix_meth([0,0,0],4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s1=SystemOfLinearEq([[7,2,1],[-3,8,3],[1,1,-6]],[10,-14,-33])\n",
+    "s1.gauss_siedel_matrix_meth([1,1,1],4)\n",
+    "\n",
+    "s1=SystemOfLinearEq([[4,1,2],[3,4,1],[1,2,3]],[4,7,3])\n",
+    "s1.gauss_siedel_matrix_meth([1,1,1],4)\n",
+    "\n",
+    "s1=SystemOfLinearEq([[10,-2,1],[-2,10,-2],[-2,-5,10]],[9,12,18])\n",
+    "s1.gauss_siedel_matrix_meth([0.5,0.5,0.5],4)\n",
+    "\n",
+    "s1=SystemOfLinearEq([[8,1,-1],[-1,7,-2],[2,1,9]],[8,4,12])\n",
+    "s1.gauss_siedel_matrix_meth([0,0,0],4)\n",
+    "\n",
+    "s1=SystemOfLinearEq([[5,-1,0],[-1,5,-1],[0,-1,5]],[9,4,-6])\n",
+    "s1.gauss_siedel_matrix_meth([0,0,0],4)\n",
+    "\n",
+    "s1=SystemOfLinearEq([[4,1,0],[1,3,-1],[1,0,2]],[3,-4,5])\n",
+    "s1.gauss_siedel_matrix_meth([0,0,0],4)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "numven",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "numven"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
