--- a/note1.ipynb
+++ b/note1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART-1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -148,8 +155,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART-1: How to use the methods"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +209,7 @@
        "0.879244435158154"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,14 +230,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART-2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MultipleUnknownFunc:\n",
     "    def __init__(self, definition):\n",
-    "        ifisinstance(definition,str):\n",
+    "        if isinstance(definition,str):\n",
     "            self.definition=parse_expr(definition)\n",
     "        else:\n",
     "            self.definition=definition\n",
@@ -248,31 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "func=MultipleUnknownFunc('x+y+z')\n",
-    "func.diff('z','y','x').get_definition()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,23 +342,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration 1:\n",
+      "X0 :  Matrix([[4.91724000000000], [-0.385780000000000]])\n",
+      "iteration 2:\n",
+      "X1 :  Matrix([[3.75018093977353], [1.44651008595981]])\n",
+      "iteration 3:\n",
+      "X2 :  Matrix([[3.20687242215275], [1.78971641724617]])\n",
+      "iteration 4:\n",
+      "X3 :  Matrix([[3.03056617394911], [1.96946277746900]])\n",
+      "iteration 5:\n",
+      "X4 :  Matrix([[3.00087984975417], [1.99912012087948]])\n"
+     ]
+    },
+    {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}-0.00150583189410812 & 0.0139820739771579\\\\0.2446469949002 & -0.0318674915545753\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}3.00000077279568\\\\1.99999922720516\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[-0.00150583189410812,  0.0139820739771579],\n",
-       "[     0.2446469949002, -0.0318674915545753]])"
+       "[3.00000077279568],\n",
+       "[1.99999922720516]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,12 +383,12 @@
     "functions=['x**2+x*y+y**2-19','x**3+y**3-35']\n",
     "sys1=SystemOfEquations(2,['x','y'],functions)\n",
     "initial_approx=[('x',4.91724),('y',-0.38578)]\n",
-    "sys1.get_J_inv(initial_approx)"
+    "sys1.newton_raphson_meth(initial_approx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -478,6 +491,13 @@
     "s1=SystemOfLinearEq([[4,1,0],[1,3,-1],[1,0,2]],[3,-4,5])\n",
     "s1.gauss_siedel_matrix_meth([0,0,0],4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
