--- a/note1.ipynb
+++ b/note1.ipynb
@@ -341,6 +341,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART-2: How to use the methods"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
@@ -384,6 +391,13 @@
     "sys1=SystemOfEquations(2,['x','y'],functions)\n",
     "initial_approx=[('x',4.91724),('y',-0.38578)]\n",
     "sys1.newton_raphson_meth(initial_approx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART-3"
    ]
   },
   {
@@ -436,6 +450,13 @@
     "            print(\"Iteration {0} : Xapprox={1}\".format(ite+1,list(X)))\n",
     "            print(\"\\n\")\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART-3: How to use the methods"
    ]
   },
   {
